bk_ida/gccida/c3/bitmap_set_bit
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/bitmap_set_bit/src/bitmap.c:902:12: error: expected expression
*( _OWORD *)( object_base + 24) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/bitmap_set_bit/src/bitmap.c:902:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( object_base + 24) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/bitmap_set_bit/src/bitmap.c:951:12: error: expected expression
*( _OWORD *)object_base = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/bitmap_set_bit/src/bitmap.c:951:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)object_base = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/bitmap_set_bit/src/obj/bitmap.o] Error 1
